k8s/installation/template/addons/dashboard/01-dashboard-namespace.yaml
# Namespace
apiVersion: v1
kind: Namespace
metadata:
  name: kubernetes-dashboard
